--- a/components.json
+++ b/components.json
@@ -1,13 +1,13 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "new-york",
+  "style": "default",
   "rsc": false,
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
-    "css": "index.css",
-    "baseColor": "neutral",
-    "cssVariables": true,
+    "css": "src/index.css",
+    "baseColor": "stone",
+    "cssVariables": false,
     "prefix": ""
   },
   "aliases": {
